Updated the documents for iSight